--- a/onlineshopping/src/main/webapp/assets/css/myapp.css
+++ b/onlineshopping/src/main/webapp/assets/css/myapp.css
@@ -1,5 +1,12 @@
+html{
+	height: 100%;
+
+	}
+
 body {
-  padding-top: 70px
+	
+  padding-top: 70px;
+  height: 100%;
 }
 
 .slide-image {
@@ -43,5 +50,31 @@ body {
 }
 
 footer {
-  margin: 50px 0;
+  margin: 0;
 }
+
+/* 
+Custom Styling of sites
+ */
+.wrapper{
+	min-height: 100%;
+	position: relative;
+	
+}
+
+.content{
+	
+	padding-bottom: 60px;
+}
+
+.footer{
+	
+	position: absolute;
+	bottom: 15px;
+	height: 60px;
+}
+
+
+
+
+
